Add calculator layout and color scheme

--- a/index.html
+++ b/index.html
@@ -8,6 +8,37 @@
     <title>Calculator</title>
 </head>
 <body>
-    BODY!!
+    <div id="calculator-container">
+        <input type="text" id="text-box">
+        <div id="row-one" class="button-row">
+            <button id="clear" class="button big-button">Clear</button>
+            <button id="delete" class="button">Delete</button>
+            <button id="dot" class="button">.</button>
+        </div>
+        <div id="row-two" class="button-row">
+            <button id="seven" class="button">7</button>
+            <button id="eight" class="button">8</button>
+            <button id="nine" class="button">9</button>
+            <button id="add" class="button">+</button>
+        </div>
+        <div id="row-three" class="button-row">
+            <button id="four" class="button">4</button>
+            <button id="five" class="button">5</button>
+            <button id="six" class="button">6</button>
+            <button id="subtract" class="button">-</button>
+        </div>
+        <div id="row-four" class="button-row">
+            <button id="one" class="button">1</button>
+            <button id="two" class="button">2</button>
+            <button id="three" class="button">3</button>
+            <button id="multiply" class="button">*</button>
+        </div>
+        <div id="row-five" class="button-row">
+            <button id="zero" class="button">0</button>
+            <button id="equal" class="button big-button">Enter</button>
+            <button id="divide" class="button">/</button>
+        </div>
+    
+    </div>
 </body>
 </html>
